src/test/ui/E0661.stderr
error[E0661]: output operand constraint lacks '=' or '+'
  --> $DIR/E0661.rs:5:18
   |
LL |     asm!("nop" : "r"(a));
   |                  ^^^

error: aborting due to previous error

